# otus_homework_guess_the_number

./: .gitignore  CMakeLists.txt  README.md  check_value.cpp  file_worker.cpp  file_worker.h  game_back.cpp  game_back.h  guess_the_number.cpp  random_value.cpp  random_value.h
